# Cloud

./: .gitignore  Cargo.toml
agent/: Cargo.toml  README.md
agent/src/: main.rs
app/: build.js  config.json  def.d.ts  package.json  tsconfig.json
app/public/: button.css  catalogue.json  classes.css  index.html  input.css  main.css  theme.css
app/public/translations/: de_DE.json  en_AU.json
app/src/: api.ts  localisation.tsx  login.tsx  main.jsx  main.tsx  welcome.tsx
app/src/applets/: files.tsx  overview.tsx
app/src/components/: button.tsx  loading.tsx
src/: api.rs  main.rs  sql.rs
