[package]
name = "jcake-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-web = "4.10.2"
clap = { version = "4.5.32", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
log = "0.4.26"
env_logger = "0.11.7"
rand = "0.9.0"
base64 = "0.22.1"

[workspace]
members = ["agent"]